@@ -8,6 +8,7 @@ kernel-2.4 \
   kernel-image-2.4-386
 kernel-2.6 \
   linux-image-2.6-686 \
+  linux-image-2.6-486 \
   linux-image-2.6-386
 usable \
   kernel-image-2.4-386 \
