@@ -9,8 +9,11 @@ base-installer (1.42) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Alternative solution for falling back to initrd-tools for sarge installs.
+  * Also support -486 kernel image flavours for i386 as introduced with 2.6.15.
+    Reliable detection of 486 processors is not possible, so continue treating
+    386 and 486 as equivalent even if 386 is no longer supported.
 
- -- Frans Pop <fjp@debian.org>  Fri,  6 Jan 2006 22:30:10 +0100
+ -- Frans Pop <fjp@debian.org>  Sat,  7 Jan 2006 18:02:44 +0100
 
 base-installer (1.41) unstable; urgency=low
 
